Implemented support for highlighting multiline string literals with syntax highlighting.